# demoUVapp

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  run.py  test_demo.py
.claude/: settings.local.json
app/: main.py
app/routers/: api.py  demo.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  dependencies_demo.html  index.html  project_demo.html  python_versions_demo.html  speed_demo.html
demos/: dependency_demo.py  speed_demo.py
